# DeepSeekWrapper

./: .env_example  .gitignore  Makefile  README.md  app.py  celery_worker.py  config.py  example.py  pyproject.toml  requirements.txt  run_api.sh
client/: __init__.py  auth.py  config.py  ds_cli.py
client/api/v1/: app.py  tasks.py  worker_celery.py
