[project]
name = "deepseekwrapper"
version = "0.1.0"
description = "Unofficial, simple DeepSeek wrapper"
authors = [
    {name = "NYXBAM",email = "delirium.dev@proton.me"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest-playwright (==0.4.0)",
    "playwright (==1.42.0)",
    "markdownify (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false